<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wifi_setting_network">Network Settings</string>
    <string name="wifi_no_network_found">No Networks Found</string>
    <string name="mobile_ap_disable">"Mobile Hotspot has been turned off.
Wi-Fi is now on."</string>
    <string name="mobile_ap_not_disable">"Wi-Fi has not been turned on.
Mobile Hotspot is still active."</string>
    <string name="wifi_network_disconnected">Network \"%1$s\" has been disconnected</string>
    <string name="wifi_network_connection">Do you want to connect to \"%1$s\" ?</string>
    <string name="wifi_net_saved">Network \"%1$s\" Saved</string>
    <string name="wifi_net_removed">Network \"%1$s\" Removed</string>
    <string name="ok_button">Turn Mobile Hotspot off</string>
    <string name="cancel_button">Do not turn Wi-Fi on</string>
    <string name="wifi_notify_mobileap_is_on">"
Mobile Hotspot is currently active.
Wi-Fi and Mobile Hotspot cannot run at the same time."</string>
    <string name="remove_network">Remove</string>
    <string name="location_e911">E911</string>
    <string name="location_e911_description">E911 Location cannot be turned off on any mobile cellular phone</string>
    <string name="location_vzw">VZW location services</string>
    <string name="location_vzw_description">Use location services provided by Verizon Wireless</string>
    <string name="location_vzw_dialogtext">By selecting \"VZW location services\", you are enabling Verizon Wireless and third party authenticated and validated location services to access certain location information available through this device and/or the network.</string>
    <string name="location_3rdparty_gps">Standalone GPS services</string>
    <string name="location_3rdparty_gps_description">Use location services based on Standalone GPS</string>
    <string name="location_3rdparty_gps_dialogtext">By selecting \"Standalone GPS services\", you are allowing access to all location information by any third party through web access or any software or peripheral components you chose to install, download, add/or attach to the device or any other means. Enabling this functionality could pose certain risks to users of this device.</string>
    <string name="location_3rdparty_network">Google location services</string>
    <string name="location_3rdparty_network_description">Use location services provided by Google</string>
    <string name="location_3rdparty_network_dialogtext">By selecting \"Google location services\", you are allowing access to all location information by Google or any third party through web access or any software or peripheral components you chose to install, download, add or attach to the device or any other means. Enabling this functionality could pose certain risks to users of this device.</string>
    <string name="dun_title">Dial up networking</string>
    <string name="dun_summary">Connect to data services using dial up network</string>
    <string name="dun_allow_warning">"Enable dial up network? 
While the dial up network is enabled, other data services (i.e., browser, MMS etc) cannot be used.Turn off the dial up network to resume using other data services."</string>
    <string name="dun_active_notification">Voice calls are not available when using your phone as a modem.</string>
    <string name="view_Button">View</string>
    <string name="wifi_edit">Edit</string>
    <string name="network_ssid">Name</string>
    <string name="save_button">Save</string>
    <string name="wifi_menu_more">More</string>
    <string name="more_network">More Network</string>
    <string name="user">User Name</string>
    <string name="network_id">Network Name(SSID)</string>
    <string name="passphrase">Key(passphrase)</string>
    <string name="key_index">WEP Key type</string>
    <string name="preferred">Preferred Network(Auto Connect)</string>
    <string name="show_message">"You are connecting to the unsecure network \"%1$s\". Information sent is not encrypted and may be visible to others. 
 
Do you still want to connect?"</string>
    <string name="add_network">Add Network</string>
    <string name="protected_setup">Automatic(Protected Setup)</string>
    <string name="manage_network">Manage Networks</string>
    <string name="connect_addnetwork">Connect</string>
    <string name="cancel_addnetwork">Cancel</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">Unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Disconnect USB storage</string>
    <string name="sdcard_unmount_sd">Unmount SD card</string>
    <string name="sdcard_format">Format USB storage</string>
    <string name="sdcard_format_sd">Format SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez ce monsieur une bire et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">USB storage</string>
    <string name="sdcard_setting_sd">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="cancel">Cancel</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="airplane_mode_summary">Disable all wireless connections</string>
    <string name="bluetooth_settings_title">Bluetooth settings</string>
    <string name="bluetooth_settings_summary">Manage connections, set device name and visibility</string>
    <string name="nfc_quick_toggle_title">NFC</string>
    <string name="nfc_quick_toggle_summary">Use NFC to read and exchange tags</string>
    <string name="wifi_quick_toggle_title">Wi-Fi</string>
    <string name="wifi_quick_toggle_summary">Turn on Wi-Fi</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="wifi_settings_category">Wi-Fi settings</string>
    <string name="wifi_settings_summary">Set up and manage WAPs</string>
    <string name="wifi_notify_open_networks">Network notification</string>
    <string name="wifi_notify_open_networks_summary">Notify me when an open network is available</string>
    <string name="wifi_add_network">Add Network</string>
    <string name="wifi_access_points">Detected Networks</string>
    <string name="scan_wifi">Search</string>
    <string name="wifi_menu_advanced">Advanced</string>
    <string name="configure">Configure</string>
    <string name="manage_devices">Manage Devices</string>
    <string name="battery_management">Battery Management</string>
    <string name="ap_configure_turn_on_message">Mobile Hotspot must be turned on for automatic configuration to work. Select an option.</string>
    <string name="ap_configure_turn_on_automatic">"Turn Hotspot on and 
begin automatic configuration"</string>
    <string name="ap_configure_begin_manual">Begin Manual Configuration</string>
    <string name="warning_wifi_disconnect_msg">"Wi-Fi is currently active. 
Wi-Fi and Mobile Hotspot cannot run at the same time"</string>
    <string name="wifi_off">Turn Wi-Fi off</string>
    <string name="dont_wifi_off">Do not turn on Mobile Hotspot</string>
    <string name="wifi_ap_config_switch_manual">"Mobile Hotspot was previously configured automatically.

Do you want to switch to manual configuration?"</string>
    <string name="wifi_ap_config_manual_yes">Yes, switch to manual</string>
    <string name="device_info_not_available">Not available</string>
    <string name="device_status_activity_title">Status</string>
    <string name="status_imei">IMEI</string>
    <string name="status_imei_sv">IMEI SV</string>
    <string name="status_wifi_mac_address">Wi-Fi MAC address</string>
    <string name="status_bt_address">Bluetooth address</string>
    <string name="status_up_time">Up time</string>
    <string name="battery_status_title">Battery status</string>
    <string name="battery_level_title">Battery level</string>
    <string name="tether_settings_title_usb">Tethering</string>
    <string name="tether_settings_summary_usb">"Share your phone's mobile data connection via USB"</string>
    <string name="network_settings_title">Mobile networks</string>
    <string name="network_settings_summary">Set options for roaming, networks</string>
    <string name="vpn_settings_title">VPN settings</string>
    <string name="vpn_settings_summary">Set up and manage Virtual Private Networks (VPNs)</string>
    <string name="mobileap_settings_summary">Enable other devices to connect Internet via 3G network of your phone</string>
    <string name="mobileap">3G Mobile Hotspot</string>
    <string name="connect_mobile_hotspot_instruction_2">Mobile Hotspot may use more battery. You may want to plug the phone into a power outlet</string>
    <string name="mobile_on">Turn on Mobile Hotspot</string>
    <string name="reminder_cancel">Do not turn on Mobile Hotspot</string>
    <string name="no_reminder">Do not display this reminder in the future</string>
    <string name="dialog_hotspot_button_continue">Continue</string>
    <string name="wifi_ap_none_security_warning">Warning: Selecting Open(no security) may make your device mobile hotspot accessible by unauthorized users. Consider using WPA2 Personal security.</string>
    <string name="wifi_ap_change_security">Change Security</string>
    <string name="data_roaming_g_dialog_msg">Accessing data during trips outside the US may result in significantly higher charges. Do you want to allow data access?</string>
    <string name="data_roaming_help">To sign up for a global data plan, call global support at 908-559-4899.</string>
</resources>