<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/wifi_settings_category" android:key="wifi_pref_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_quick_toggle_title" android:key="enable_wifi" android:summary="@string/wifi_quick_toggle_summary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_notify_open_networks" android:key="notify_open_networks" android:summary="@string/wifi_notify_open_networks_summary" android:dependency="enable_wifi" />
    <com.android.settings.ProgressCategory android:persistent="false" android:title="@string/wifi_access_points" android:key="access_points" android:dependency="enable_wifi" />
    <PreferenceCategory android:persistent="false" android:title="@string/wifi_setting_network" android:key="settings" android:dependency="enable_wifi" />
    <Preference android:persistent="false" android:title="@string/wifi_add_network" android:key="add_network" android:dependency="enable_wifi" />
    <Preference android:persistent="false" android:title="@string/manage_network" android:key="add_manage_network" android:dependency="enable_wifi" />
    <Preference android:persistent="false" android:title="@string/scan_wifi" android:key="search_network" android:dependency="enable_wifi" />
    <Preference android:persistent="false" android:enabled="true" android:title="@string/wifi_menu_advanced" android:key="advanced_network" />
</PreferenceScreen>
