<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/device_status_activity_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:persistent="false" android:title="@string/battery_status_title" android:key="battery_status" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/battery_level_title" android:key="battery_level" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_imei" android:key="imei" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_imei_sv" android:key="imei_sv" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_wifi_mac_address" android:key="wifi_mac_address" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_bt_address" android:key="bt_address" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
    <Preference android:persistent="false" android:title="@string/status_up_time" android:key="up_time" android:summary="@string/device_info_not_available" style="?android:attr/preferenceInformationStyle" />
</PreferenceScreen>
