<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="300.0sp" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="17.0sp" android:textColor="#ffffffff" android:id="@id/battery_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/connect_mobile_hotspot_instruction_2" />
        <Button android:textSize="15.0sp" android:id="@id/mobile_on" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/mobile_on" />
        <Button android:textSize="15.0sp" android:id="@id/mobile_off" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/reminder_cancel" />
        <Button android:textSize="15.0sp" android:id="@id/battery_mnt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/battery_management" />
        <CheckBox android:textSize="14.0sp" android:textColor="#ffffffff" android:id="@id/check_reminder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/no_reminder" />
    </LinearLayout>
</ScrollView>
