<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="300.0sp" android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:textSize="17.0sp" android:textColor="#ffffffff" android:id="@id/warning_wifi_disconnect" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/warning_wifi_disconnect_msg" />
        <Button android:textSize="14.0sp" android:id="@id/wifi_off_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/wifi_off" />
        <Button android:textSize="14.0sp" android:id="@id/dont_wifi_off_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/dont_wifi_off" />
    </LinearLayout>
</ScrollView>
