<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="300.0sp" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="17.0sp" android:textColor="#ffffffff" android:id="@id/none_security_warn_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/wifi_ap_none_security_warning" />
        <Button android:textSize="15.0sp" android:id="@id/wifi_ap_change_security" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/wifi_ap_change_security" />
        <Button android:textSize="15.0sp" android:id="@id/dialog_hotspot_button_continue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/dialog_hotspot_button_continue" />
    </LinearLayout>
</ScrollView>
